--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -3,9 +3,8 @@ public with sharing class AccountController {
     @AuraEnabled(cacheable = true scope = 'global')
     public static List <Account> getAllAccounts(){
 
-        List<Account> acclist =[SELECT ID, Name 
+        List<Account> acclist =[SELECT ID, Name,  Industry, ShippingAddress, Type, Site
         FROM Account WHERE Phone = null];
-
         return acclist;
     }
    
