--- a/force-app/main/default/classes/ShowroomController.cls
+++ b/force-app/main/default/classes/ShowroomController.cls
@@ -1,10 +1,9 @@
 public with sharing class ShowroomController {
     @AuraEnabled(cacheable = true scope = 'global')
-    public static List <Showroom__c> getAllRelatedShowrooms(Id accountId){
+    public static List <Showroom__c> getAllShowrooms(){
 
-        return[SELECT ID, Name 
-        FROM Showroom__c 
-        WHERE Showroom_Account__c =:accountId 
-        WITH SECURITY_ENFORCED];
+        List<Showroom__c> showlist =[SELECT ID, Name
+        FROM Showroom__c ];
+        return showlist;
 }
 }
