--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -6,8 +6,23 @@ public with sharing class AccountController {
         List<Account> acclist =[SELECT ID, Name,  Industry, ShippingAddress, Type, Site
         FROM Account WHERE Phone = null];
         return acclist;
-    }
+        }
    
+    @AuraEnabled(cacheable=true scope='global' )
+    public static List<Showroom__c> getRelatedShowrooms(String accountId){
+        List<Showroom__c> showlist =[SELECT ID, Name
+        FROM Showroom__c WHERE Showroom_Account__c =:accountId ];
+        return showlist;
+        }
+
+    @AuraEnabled(cacheable = true scope = 'global')
+    public static List <Showroom_Offer__c> getAllRelatedVehicles(Id showroomOfferId){
+
+        return[SELECT Vehicle__r.ID, Vehicle__r.Name 
+        FROM Showroom_Offer__c
+        WHERE Showroom__r.id =:showroomOfferId 
+        WITH SECURITY_ENFORCED];
+        }
 }
 
    
