--- a/force-app/main/default/classes/VehicleController.cls
+++ b/force-app/main/default/classes/VehicleController.cls
@@ -2,6 +2,7 @@ public with sharing class VehicleController {
     @AuraEnabled(cacheable = true scope = 'global')
     public static List <Vehicle__c> getAllVehicles(String showroomId){
 
+        // You don't need to do Vehicle__c.Id when we are using From Vehicle__c
        List<Vehicle__c> vehicles = [SELECT Vehicle__c.ID, Vehicle__c.Name, Vehicle__c.Brand__c, Vehicle__c.Model__c, Vehicle__c.Price__c, 
        Vehicle__c.Photo_display__c, Vehicle__c.Photo__c, Vehicle__c.Interested__c
       FROM Vehicle__c WHERE Showroom__c =: showroomId];
